added another site

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <div class="divbuttons">
       <button class="btn">
         <a
+          href="https://poonsgollamudi.github.io/seasons-anime.github.io/"
+          target="_blank"
+          >First Website</a
+        >
+      </button>
+      <button class="btn">
+        <a
           href="https://poonsgollamudi.github.io/memajuve-fave-anime/"
           target="_blank"
           >Anime List</a
