--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
       </button>
       <button class="btn">
         <a
+          href="https://poonsgollamudi.github.io/memajuve-art-site/"
+          target="_blank"
+          >Art site</a
+        >
+      </button>
+      <button class="btn">
+        <a
           href="https://poonsgollamudi.github.io/memajuve-blog/"
           target="_blank"
           >Blog</a
