updated art page url

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </button>
       <button class="btn">
         <a
-          href="https://poonsgollamudi.github.io/memajuve-art-site/"
+          href="https://poonsgollamudi.github.io/memajuve-art-site/src/"
           target="_blank"
           >Art site</a
         >
