updated cartoons url

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         >
       </button>
       <button class="btn">
-        <a href="https://poonsgollamudi.github.io/" target="_blank"
+        <a
+          href="https://poonsgollamudi.github.io/memajuve-fave-cartoons"
+          target="_blank"
           >Cartoon List</a
         >
       </button>
