Added dramas url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mamajuve's facoutite lists</title>
+    <title>Mamajuve's Favourite lists</title>
     <link rel="icon" type="image/svg+xml" href="images/ladycoding.svg" />
     <link href="src/input.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="divheading">
-      <h1 class="heading">Memajuve's Favourites</h1>
+      <h1 class="heading">Memajuve's Favouritea</h1>
     </div>
     <div class="divbuttons">
       <button class="btn">
@@ -26,6 +26,12 @@
           >First Website</a
         >
       </button>
+      <button class="btn">
+        <a
+          href="https://poonsgollamudi.github.io/memajuve-fave-dramas/"
+          target="_blank"
+          >TV Shows</a
+        >
       <button class="btn">
         <a
           href="https://poonsgollamudi.github.io/memajuve-fave-anime/"
