updated spelling error

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="divheading">
-      <h1 class="heading">Memajuve's Favouritea</h1>
+      <h1 class="heading">Memajuve's Favourites</h1>
     </div>
     <div class="divbuttons">
       <button class="btn">
